# todos-rust

./: .env  .gitignore  .rustfmt.toml  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: build_and_test.yaml
migrations/: 20231019203949_create-todos-schema-and-tables.sql
src/: latency.rs  main.rs  middleware.rs  server.rs
src/extensions/: mod.rs
src/logging/: mod.rs
src/server/: middleware.rs
src/todos/: data.rs  mod.rs
src/todos/api/: models.rs  routes.rs
src/todos/data/: in_memory_todos_repository.rs  mod.rs  models.rs  postgres_todos_repository.rs  todos_repository.rs
