[package]
name = "todos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
axum = "0.6.20"
chrono = { version = "0.4.31", features = ["serde", "clock"] }
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-test = "0.4.3"
tower = { version = "0.4.13", features = ["util", "filter"] }
tower-http = { version = "0.4.4", features = ["compression-gzip", "map-response-body", "request-id", "timeout", "trace", "util", "validate-request"] }
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
